@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2016-2019 phantombot.tv
+ * Copyright (C) 2016-2022 phantombot.github.io/PhantomBot
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -17,12 +17,18 @@
 package tv.phantombot.script;
 
 import java.io.File;
-import java.io.IOException;
 import java.io.FileNotFoundException;
+import java.io.IOException;
+import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.List;
-import org.apache.commons.io.FileUtils;
-import org.mozilla.javascript.*;
+import org.mozilla.javascript.Context;
+import org.mozilla.javascript.ContextFactory;
+import org.mozilla.javascript.EvaluatorException;
+import org.mozilla.javascript.NativeObject;
+import org.mozilla.javascript.RhinoException;
+import org.mozilla.javascript.ScriptableObject;
+import org.mozilla.javascript.StackStyle;
 import org.mozilla.javascript.tools.debugger.Main;
 import tv.phantombot.PhantomBot;
 
@@ -33,15 +39,17 @@ public class Script {
     private final List<ScriptDestroyable> destroyables = new ArrayList<>();
     private static final NativeObject vars = new NativeObject();
     private final File file;
+    private final String fileName;
     private long lastModified;
     private Context context;
     private boolean killed = false;
     private int fileNotFoundCount = 0;
     private static ScriptableObject scope;
 
-    @SuppressWarnings("CallToThreadStartDuringObjectConstruction")
-    public Script(File file) {
+    @SuppressWarnings({"CallToThreadStartDuringObjectConstruction", "LeakingThisInConstructor"})
+    public Script(File file, String fileName) {
         this.file = file;
+        this.fileName = fileName;
         this.lastModified = file.lastModified();
 
         if (PhantomBot.getReloadScripts()) {
@@ -50,9 +58,9 @@ public class Script {
     }
 
     public static String callMethod(String method, String arg) {
-        Object[] obj = new Object[] {arg};
+        Object[] obj = new Object[]{arg};
 
-        return scope.callMethod(global, method, obj).toString();
+        return ScriptableObject.callMethod(global, method, obj).toString();
     }
 
     @SuppressWarnings("rawtypes")
@@ -71,8 +79,8 @@ public class Script {
                 com.gmt2001.Console.out.println("Reloaded module: " + path);
             }
             fileNotFoundCount = 0;
-        } catch (Exception ex) {
-            if (ex.getMessage().indexOf("This could be a caching issue") != -1) {
+        } catch (IOException ex) {
+            if (ex.getMessage().contains("This could be a caching issue")) {
                 fileNotFoundCount++;
                 if (fileNotFoundCount == 1) {
                     return;
@@ -87,11 +95,12 @@ public class Script {
                 String path = file.getPath().replace("\056\134", "").replace("\134", "/").replace("scripts/", "");
                 com.gmt2001.Console.err.println("Failed to reload module: " + path + ": " + ex.getMessage());
             }
+            com.gmt2001.Console.err.printStackTrace(ex);
         }
     }
 
     @SuppressWarnings("rawtypes")
-    public void reload(Boolean silent) throws IOException {
+    public void reload(boolean silent) throws IOException {
         if (killed) {
             return;
         }
@@ -108,8 +117,8 @@ public class Script {
                 }
             }
             fileNotFoundCount = 0;
-        } catch (Exception ex) {
-            if (ex.getMessage().indexOf("This could be a caching issue") != -1) {
+        } catch (IOException ex) {
+            if (ex.getMessage().contains("This could be a caching issue")) {
                 fileNotFoundCount++;
                 if (fileNotFoundCount == 1) {
                     return;
@@ -124,6 +133,7 @@ public class Script {
                 String path = file.getPath().replace("\056\134", "").replace("\134", "/").replace("scripts/", "");
                 com.gmt2001.Console.err.println("Failed to reload module: " + path + ": " + ex.getMessage());
             }
+            com.gmt2001.Console.err.printStackTrace(ex);
         }
     }
 
@@ -146,10 +156,10 @@ public class Script {
             @Override
             protected boolean hasFeature(Context cx, int featureIndex) {
                 switch (featureIndex) {
-                case Context.FEATURE_LOCATION_INFORMATION_IN_ERROR:
-                    return true;
-                default:
-                    return super.hasFeature(cx, featureIndex);
+                    case Context.FEATURE_LOCATION_INFORMATION_IN_ERROR:
+                        return true;
+                    default:
+                        return super.hasFeature(cx, featureIndex);
                 }
             }
         };
@@ -165,6 +175,10 @@ public class Script {
         }
 
         context = ctxFactory.enterContext();
+        if (PhantomBot.getEnableRhinoES6()) {
+            context.setLanguageVersion(Context.VERSION_ES6);
+        }
+
         if (!PhantomBot.getEnableRhinoDebugger()) {
             context.setOptimizationLevel(9);
         }
@@ -175,7 +189,7 @@ public class Script {
         scope.defineProperty("$script", this, 0);
 
         /* Configure debugger. */
-        if (PhantomBot.getEnableRhinoDebugger()) {
+        if (PhantomBot.getEnableRhinoDebugger() && debugger != null) {
             if (file.getName().endsWith("init.js")) {
                 debugger.setBreakOnEnter(false);
                 debugger.setScope(scope);
@@ -185,13 +199,16 @@ public class Script {
         }
 
         try {
-            context.evaluateString(scope, FileUtils.readFileToString(file), file.getName(), 1, null);
+            context.evaluateString(scope, Files.readString(file.toPath()), file.getName(), 1, null);
         } catch (FileNotFoundException ex) {
+            com.gmt2001.Console.err.printStackTrace(ex);
             throw new IOException("File not found. This could be a caching issue, will retry.");
         } catch (EvaluatorException ex) {
+            com.gmt2001.Console.err.printStackTrace(ex);
             throw new IOException("JavaScript Error: " + ex.getMessage());
-        } catch (Exception ex) {
-            throw new IOException(ex.getMessage());
+        } catch (IOException ex) {
+            com.gmt2001.Console.err.printStackTrace(ex);
+            throw ex;
         }
     }
 
@@ -202,9 +219,9 @@ public class Script {
 
     @SuppressWarnings("rawtypes")
     public void doDestroyables() {
-        for (ScriptDestroyable destroyable : destroyables) {
+        destroyables.forEach((destroyable) -> {
             destroyable.destroy();
-        }
+        });
 
         destroyables.clear();
     }
@@ -223,6 +240,10 @@ public class Script {
 
     public String getPath() {
         return file.toPath().toString();
+    }
+
+    public String getRealFileName() {
+        return fileName;
     }
 
     public Context getContext() {
